fix: mobile view cut off

--- a/src/components/homepage/homepage/homepage.module.css
+++ b/src/components/homepage/homepage/homepage.module.css
@@ -4,6 +4,7 @@
   position: relative;
 
   height: 100%;
+  overflow: scroll;
 
   @media screen and (min-width: 922px) {
     height: auto;
